--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   </style>
 </head>
 <body>
-  <p>Hello, <span id="my-name">anonymous user</span>!</p>
-
+  <p>WELCOME TO THE UNIVERSITY OF, <span id="my-name">anonymous place </span>!</p>
   <form id="get-name" action="#" method="post">
     <label for="user-name">Enter name:</label>
     <input type="text" id="user-name" placeholder="Your name?">
